feat(security): implement comprehensive security and API testing improvements
- Implement proper BCrypt password hashing in UserService
  - Add PasswordEncoder dependency injection to UserService
  - Enhance mapToEntity() method to hash passwords during user creation
  - Enhance updateEntityFromDTO() method to hash passwords during user updates
  - Enhance resetPassword() method to hash passwords during password resets
  - All passwords now securely hashed using BCrypt algorithm

- Fix critical security configuration issues
  - Resolve conflict between WebConfig path prefix and SecurityConfig public endpoints
  - Correct public endpoint paths to include proper /api prefix
  - Fix CORS configuration for cross-origin requests
  - Enhance JWT authentication flow with proper token validation

- Resolve Docker configuration and environment issues
  - Fix environment variable loading from docker.env file
  - Correct database connection configuration for Docker containers
  - Fix boolean conversion errors in application-docker.properties
  - Resolve JDBC URL construction issues in DatabaseConfig
  - Enhance Docker Compose configuration for proper service communication

- Fix OpenAPI documentation generation
  - Resolve springdoc configuration version format problems
  - Fix OpenAPI properties in application-docker.properties
  - Correct Swagger UI accessibility and functionality
  - Enhance API documentation generation and display

- Create comprehensive Postman collection for API testing
  - Add requests for all major API endpoints (auth, users, transactions, dashboard, Brazilian market)
  - Configure environment variables for easy testing
  - Verify all public and authenticated endpoints functionality
  - Complete authentication flow with JWT token management

- Update documentation and project structure
  - Update README.md with new security and testing capabilities
  - Update CHANGELOG.md with comprehensive improvement details
  - Add .cursorrules file for project-spec

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   # Database service
   db:
     image: postgres:17
+    env_file:
+      - docker.env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${DB_USERNAME}
@@ -11,7 +13,7 @@ services:
       SONAR_DB_USER: ${SONAR_DB_USER}
       SONAR_DB_PASSWORD: ${SONAR_DB_PASSWORD}
     ports:
-      - "${DB_PORT}"
+      - "${DB_PORT}:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./docker/postgres-init-sonarqube.sh:/docker-entrypoint-initdb.d/postgres-init-sonarqube.sh
@@ -56,11 +58,10 @@ services:
       dockerfile: Dockerfile
       args:
         DEV_MODE: "${DEV_MODE}"
+    env_file:
+      - docker.env
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:${DB_PORT}/${POSTGRES_DB}
-      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       JAVA_OPTS: "${JAVA_OPTS:-}"
     ports:
       - "${APPLICATION_PORT}:8080"
