--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,13 @@ app.jpa.format-sql=${JPA_FORMAT_SQL:false}
 app.jpa.use-sql-comments=${JPA_USE_SQL_COMMENTS:false}
 app.jpa.defer-datasource-initialization=${JPA_DEFER_DATASOURCE_INIT:false}
 
+# Spring Boot JPA Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+
 # JPA Properties
 app.jpa.properties.hibernate-format-sql=${HIBERNATE_FORMAT_SQL:false}
 app.jpa.properties.hibernate-use-sql-comments=${HIBERNATE_USE_SQL_COMMENTS:false}
@@ -117,12 +124,7 @@ spring.datasource.driver-class-name=${app.database.driver-class-name}
 # Bean definition override to resolve JPA auditing handler conflict
 spring.main.allow-bean-definition-overriding=true
 
-spring.jpa.hibernate.ddl-auto=${app.jpa.hibernate-ddl-auto}
-spring.jpa.properties.hibernate.dialect=${app.jpa.dialect}
-spring.jpa.show-sql=${app.jpa.show-sql}
-spring.jpa.properties.hibernate.format_sql=${app.jpa.properties.hibernate-format-sql}
-spring.jpa.properties.hibernate.use_sql_comments=${app.jpa.properties.hibernate-use-sql-comments}
-spring.jpa.defer-datasource-initialization=${app.jpa.defer-datasource-initialization}
+# Spring Boot JPA properties removed - using custom configuration
 
 logging.level.root=${app.logging.level}
 logging.level.com.finance_control=DEBUG
